--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
 
   <title>game_demo</title>
   <link rel="manifest" href="manifest.json">
+  <script>
+    document.body.addEventListener('touchmove', function(e) {
+      e.preventDefault();
+    }, { passive: false });
+  </script>
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2407370707";
+    const serviceWorkerVersion = "1082255465";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
