--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
       e.preventDefault();
     }, { passive: false });
   </script>
+  <script>
+    document.addEventListener('dblclick', function(event) {
+      event.preventDefault();
+    }, { passive: false });
+  </script>
 </body>
 
 </html>
