--- a/index.html
+++ b/index.html
@@ -33,12 +33,25 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "2500766843";
+    const serviceWorkerVersion = "1785025940";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script>
+    window.addEventListener('load', function() {
+      // 创建一个空的音频上下文
+      var audioContext = new (window.AudioContext || window.webkitAudioContext)();
+      
+      // 在用户交互时恢复音频上下文
+      document.addEventListener('click', function() {
+        if (audioContext.state === 'suspended') {
+          audioContext.resume();
+        }
+      });
+    });
+  </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
